# filestore

./: .travis.yml  CHANGES  Setup.lhs  TODO  Tests.lhs  filestore.cabal  stack.yaml
.github/workflows/: ci.yml
Data/: FileStore.hs
Data/FileStore/: Darcs.hs  DarcsXml.hs  ExtraData.hs  Generic.hs  Git.hs  Mercurial.hs  MercurialCommandServer.hs  Sqlite3.hs  Types.hs  Utils.hs
Data/FileStore/Compat/: Locale.hs
examples/: darcs-days.hs
extra/: Paths_filestore.hs  post-update
tests/: Tests.hs  Tests.lhs
