Name:                filestore
Version:             0.4.2
Cabal-version:       >= 1.2
Build-type:          Custom
Synopsis:            Interface for versioning file stores.
Description:         The filestore library provides an abstract interface for a versioning
                     file store, and modules that instantiate this interface.  Currently
                     Git, Darcs, and Mercurial modules are provided, and other VCSs
                     or databases could be added.
Category:            Data
Stability:           Experimental
License:             BSD3
License-File:        LICENSE
Author:              John MacFarlane, Gwern Branwen, Sebastiaan Visser
Maintainer:          jgm@berkeley.edu
Homepage:            http://johnmacfarlane.net/repos/filestore

Data-Files:          extra/post-update, CHANGES
Extra-source-files:  Tests.lhs

-- Commented out until Cabal 1.6 becomes common.
-- Source-repository head
--    Type:            darcs
--    Location:        http://johnmacfarlane.net/repos/filestore

Flag tests
    default:    False
    description: Build test suite

Flag maxcount
    default:     True
    description: Make use of a recent (>= 2.3.0) Darcs feature which vastly improves the performance
                 of 'latest'.  You should disable this flag if you plan to use gitit with an
                 older version of Darcs, or 'latest' will raise an error.

Library
    Build-depends:       base >= 4 && < 5,
                         bytestring >= 0.9 && < 1.0,
                         containers >= 0.3 && < 0.5,
                         utf8-string >= 0.3 && < 0.4,
                         filepath >= 1.1 && < 1.4,
                         directory >= 1.0 && < 1.2,
                         parsec >= 2 && < 3.2,
                         process >= 1.0 && < 1.2,
                         time >= 1.1 && < 1.5,
                         xml >= 1.3 && < 1.4,
                         split >= 0.1 && < 0.2,
                         Diff >= 0.1.2 && < 0.2,
                         old-locale >= 1.0 && < 1.1

    Exposed-modules:     Data.FileStore, Data.FileStore.Types, Data.FileStore.Git, Data.FileStore.Darcs, Data.FileStore.Mercurial,
                         -- Data.FileStore.Sqlite3,
                         Data.FileStore.Utils, Data.FileStore.Generic
    Other-modules:       Paths_filestore,
                         Data.FileStore.DarcsXml,
                         Data.FileStore.MercurialCommandServer
    extensions:          FlexibleInstances, CPP

    if flag(maxcount) 
        cpp-options: -DUSE_MAXCOUNT
        extensions: CPP
    if impl(ghc >= 6.12)
      Ghc-Options:       -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:       -Wall
    Ghc-Prof-Options:    -auto-all

Executable test-filestore
    if flag(tests)
       Buildable: True
    else
       Buildable: False
    Main-is: Tests.lhs
    Build-depends:  base >= 4 && < 5, HUnit >= 1.2 && < 1.3, mtl,
                    time, Diff

