Name:                filestore
Version:             0.6.3.5
Cabal-Version:       >= 1.10
Build-type:          Simple
Synopsis:            Interface for versioning file stores.
Description:         The filestore library provides an abstract interface for a versioning
                     file store, and modules that instantiate this interface.  Currently
                     Git, Darcs, and Mercurial modules are provided, and other VCSs
                     or databases could be added.
Category:            Data
Stability:           Experimental
License:             BSD3
License-File:        LICENSE
Author:              John MacFarlane, Gwern Branwen, Sebastiaan Visser
Maintainer:          jgm@berkeley.edu
Bug-Reports:         https://github.com/jgm/filestore/issues

Data-Files:          extra/post-update, CHANGES

Source-repository head
  type:          git
  location:      git://github.com/jgm/filestore.git

Flag maxcount
    default:     True
    description: Make use of a recent (>= 2.3.0) Darcs feature which vastly improves the performance
                 of 'latest'.  You should disable this flag if you plan to use gitit with an
                 older version of Darcs, or 'latest' will raise an error.

Library
    Build-depends:       base >= 4 && < 5,
                         bytestring >= 0.9 && < 1.0,
                         containers >= 0.3 && < 0.7,
                         utf8-string >= 0.3 && < 1.1,
                         filepath >= 1.1 && < 1.5,
                         directory >= 1.0 && < 1.4,
                         parsec >= 2 && < 3.2,
                         process >= 1.0 && < 1.7,
                         time >= 1.5 && < 1.10,
                         xml >= 1.3 && < 1.4,
                         split >= 0.1 && < 0.3,
                         Diff >= 0.2 && < 0.5,
                         old-locale >= 1.0 && < 1.1

    Exposed-modules:     Data.FileStore, Data.FileStore.Types, Data.FileStore.Git, Data.FileStore.Darcs, Data.FileStore.Mercurial,
                         -- Data.FileStore.Sqlite3,
                         Data.FileStore.Utils, Data.FileStore.Generic
    Other-modules:       Paths_filestore,
                         Data.FileStore.DarcsXml,
                         Data.FileStore.MercurialCommandServer,
                         Data.FileStore.Compat.Locale
    Default-Extensions:  FlexibleInstances, CPP
    Default-Language:    Haskell98
    if flag(maxcount) 
        cpp-options: -DUSE_MAXCOUNT
    if impl(ghc >= 6.12)
      Ghc-Options:       -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:       -Wall
    Ghc-Prof-Options:    -fprof-auto-exported

Test-suite test-filestore
    Type:           exitcode-stdio-1.0
    Hs-source-dirs: tests
    Main-is:        Tests.hs
    Default-Language:  Haskell98
    Build-depends:  base >= 4.7 && < 5,
                    HUnit >= 1.2 && < 1.7,
                    mtl,
                    time,
                    Diff >= 0.2 && < 0.5,
                    filepath >= 1.1 && < 1.5,
                    directory >= 1.1 && < 1.4,
                    filestore

